--- a/client/components/Contact/Contact_show_profile_page.html
+++ b/client/components/Contact/Contact_show_profile_page.html
@@ -1,4 +1,6 @@
 <template name="Contact_show_profile_page">
+  
+  mostrar contacto 
 {{#each contact in contactArray}}
     {{> Contact_show_profile (contactArgs contact)}}
     <!-- item {{actodeId}} -->
