--- a/imports/ui/components/person/person-show-work.html
+++ b/imports/ui/components/person/person-show-work.html
@@ -68,11 +68,11 @@
                 </div>
             {{/each}}
               <hr>
-              <button class='js-create-worker-rel btn btn-xs btn-default'>Crear otra posicion</button>
+              <!-- <button class='js-create-worker-rel btn btn-xs btn-default'>Crear otra posicion</button> -->
               
           {{else}} <!-- //positionCountGreaterThan -->
             <h4>No tienes datos de trabajo</h4>
-            <button class='js-create-worker-rel btn btn-xs btn-primary'>Crear una posicion</button>
+            <!-- <button class='js-create-worker-rel btn btn-xs btn-primary'>Crear una posicion</button> -->
             
           {{/if}}
         {{/if}}
