--- a/client/components/Search/Search_fast_result.html
+++ b/client/components/Search/Search_fast_result.html
@@ -2,7 +2,7 @@
 <li class='h-bg-yellow search-fast-result'>
     <!-- FAST VIEW, NOT PROFILE, USER HAS TO CLICK ON THE NAME TO GO TO PROFILE PAGE OR PRESS ENTER -->
     <!-- <a href='/show-{{actodeType}}/{{rel.destiny}}?relType={{rel.type}}'> -->
-    <a href='/show-{{actodeType}}/{{_id}}'>
+    <a href='/show-1/{{_id}}'>
         <div class="panel-body note-link">
             <h3>{{name}}</h3>
             actodetype {{actodeType}}
