--- a/client/stylesheets/globals/layout.import.less
+++ b/client/stylesheets/globals/layout.import.less
@@ -56,6 +56,7 @@ body {
  // opacity: 0.8;
  padding-left: 19%;
  padding-top: -1%;
+ margin-top: 55px;
  // position:relative;
  position:absolute;
  // width:2000px;
