--- a/client/components/App/notFound/App_notFound.html
+++ b/client/components/App/notFound/App_notFound.html
@@ -6,8 +6,8 @@
 
     <div class="error-container">
         <i class="pe-7s-way text-success big-icon"></i>
-        <h1>Ouch!</h1>
-        <strong>No podemos encontrar lo que nos pedis.</strong>
+        <h1>No podemos encontrar lo que nos pedis.!</h1>
+        <strong>Por favor, volve a probar con otro termino.</strong>
         <p>
             Los datos que estas buscando no existen o no se pueden encontrar de esta manera. Tambien puede ser que no tengas acceso. Ponete en contacto con el administrador de tu cuenta o busca con otra palabra clave.
         </p>
