--- a/client/components/Search/Search_result_item.html
+++ b/client/components/Search/Search_result_item.html
@@ -2,14 +2,10 @@
     <!-- <a href="../show-{{actodeType}}/{{_id}}"> -->
     <li class='search-result-item'>
   <!-- <a href="../show-{{actodeType}}/{{_id}}">{{name}}</a> -->
-  <a href="/show-{{actodeType}}/{{_id}}">
+  <a href="#">
   <div class="panel-body note-link">
 
-                                {{#if treatedAs}}
-                                 {{treatedAs}}
-                                {{else}}
-                                  {{name}}
-                                {{/if}}
+                              {{name}} {{lastName}}
                           </div>
                         </a>
 </li>
