--- a/client/components/Search/Search_fast_result.html
+++ b/client/components/Search/Search_fast_result.html
@@ -2,65 +2,53 @@
 <li class='h-bg-yellow search-fast-result'>
     <!-- FAST VIEW, NOT PROFILE, USER HAS TO CLICK ON THE NAME TO GO TO PROFILE PAGE OR PRESS ENTER -->
     <!-- <a href='/show-{{actodeType}}/{{rel.destiny}}?relType={{rel.type}}'> -->
-    <a href='/show-1/{{_id}}'>
+    <a href='#'>
         <div class="panel-body note-link">
-            <h3>{{name}}</h3>
-            actodetype {{actodeType}}
-            {{rel.destiny}}
-            {{rel.type}}
-            {{_id}}
-            {{#if rel}}
-            HCF26700315296E3
-                <p>
-                    <span class='label label-default'>
-                        {{relTypeTranslate rel.type}}</span>
-                </p>
-
-            {{/if}}
             {{#if cont}}
-                <h3>{{treatedAs}}</h3>
-                <p>
-                    <span class='label label-default'>
-                        {{relTypeTranslate cont.type}}</span>
-                </p>
-                <div class='row'>
-                    <div class='col-xs-6 col-md-6 col-lg-4'>
-                        <p class='text text-muted'>
-                            <small class='text-muted'>
-                                {{#if isMale}}
-                                    <i class='fa fa-mars'></i>
-                                {{else}}
-                                    <i class='fa fa-venus'></i>
-                                {{/if}}
-
-                            </small>
-                            {{#if formalTreatment}}
-                                <span class='label label-warning'>FORMAL</span>
+                <h3>{{cont.treatedAs}}</h3>
+                {{#if cont.formalTreatment}}
+                    <span class='label label-default pull-right'>FORMAL</span>
+                {{/if}}
+                  <h5>  <span class='text '>
+                            {{#if isMale}}
+                                <i class='fa fa-male'></i>
+                            {{else}}
+                                <i class='fa fa-female'></i>
                             {{/if}}
-                        </p>
+                    </span>{{name}} {{lastName}}</h5>
+                    <hr>
+          
+                <!-- <div class='row'>
+                    <div class='col-xs-2 col-md-2 col-lg-2'>
+                        <span class='text '>
+                                {{#if isMale}}
+                                    <i class='fa fa-male'></i>
+                                {{else}}
+                                    <i class='fa fa-female'></i>
+                                {{/if}}
+                        </span>
                     </div>
 
-                    <div class='col-xs-3 col-md-3 col-lg-4'>
+                    <div class='col-xs-10 col-md-10 col-lg-10'> -->
                         {{#if email}}
-
-                            <a class='btn btn-lg btn-primary' href='mailto:{{email}}' data-action='email'>
+                            <a class='btn btn-sm btn-default' href='mailto:{{email}}' data-action='email'>
                                 <i class='fa fa-envelope'></i>
+                                Mandarle un mail
                             </a>
 
                         {{/if}}
-
-                    </div>
-                    <div class='col-xs-3 col-md-3 col-lg-4'>
-
                         {{#if mobile}}
-                            <a class='btn btn-lg btn-primary' href='tel:{{mobile}}' data-action='mobile'>
-                                <i class='fa fa-whatsapp'></i>
+                            <a class='btn btn-sm btn-default' href='tel:{{mobile}}' data-action='email'>
+                                <i class='fa fa-mobile-phone'></i>
+                                {{mobile}}
                             </a>
+
                         {{/if}}
-
+<!-- 
                     </div>
+              
 
-                </div>
+                </div> -->
             {{/if}}
 
         </div>
