--- a/client/components/App/header/header.html
+++ b/client/components/App/header/header.html
@@ -95,7 +95,7 @@
                         <a class="dropdown-toggle" href="{{pathFor 'home'}}" >
                         
                             <i class="pe-7s-keypad">  </i>
-                            <span class='text-primary'><small>Panel de control</small>  </span>
+                              <!-- <span class='font-light'><small>{{_ "Control panel"}}</small>  </span> -->
                         </a>
 
                     </li>
@@ -103,7 +103,7 @@
                     <li class='dropdown'>
                         <a href={{pathFor 'exit'}}>
                             <i class="pe-7s-upload pe-rotate-90"></i>
-                            <span class='text-primary'><small> Salir </small></span>
+                            <!-- <span class='font-light'><small>{{_ "Log out"}}</small>  </span> -->
                             
                         </a>
                     </li>
