--- a/client/components/common/navigation.html
+++ b/client/components/common/navigation.html
@@ -46,6 +46,12 @@
                   <!-- <a class='js-reset btn btn-default' href="#"><i class='fa fa-pencil'>  </i><small>  Mandar email olvido</small></a> -->
                   
                 </div>
+                
+                <div>
+                  <button class='js-show-treasury btn btn-default pull-left'><small>  {{_ "Treasury"}}</small></button>
+                  <!-- <a class='js-reset btn btn-default' href="#"><i class='fa fa-pencil'>  </i><small>  Mandar email olvido</small></a> -->
+                  
+                </div>
               
                
                
