--- a/imports/ui/components/contact/contact-edit.html
+++ b/imports/ui/components/contact/contact-edit.html
@@ -1,7 +1,11 @@
 <template name="Contact_edit">
-  <div class="panel panel-default">
-    <div class="panel-heading">Contacto de {{company.name}}</div>
-    <div class="panel-body">
+  <div class="">
+  <!-- <div class="panel panel-default"> -->
+    <div class="text-primary">{{_ "New contact at"}} {{company.name}}</div>
+    <!-- <div class="panel-heading">{{_ "New contact at"}} {{company.name}}</div> -->
+    <div class="">
+    <!-- <div class="panel-body"> -->
+      
       <form class="form-horizontal" data-action='form'>
         <div class="form-group">
           <label class="control-label" for='treatedAsInput'>Le dicen ... </label>
