--- a/imports/ui/components/item/item-edit.html
+++ b/imports/ui/components/item/item-edit.html
@@ -15,6 +15,18 @@
           <span class='form-control-feedback'></span>
           <span class='help-block'></span>
         </div>
+        <div class="form-group">
+          <label class="control-label" for='profitCenterSelect'>{{_ "Profit center"}} </label>
+          <select id="profitCenterSelect" name="profitcenter" class='form-control'>
+            <option value=''>{{_ "Select"}} </option>
+            {{#each pc in profitCenters}}
+            <option value='{{pc._id}}' >{{pc.name}}</option>
+            {{/each}}
+          
+          </select>
+          <span class='form-control-feedback'></span>
+          <span class='help-block'></span>
+        </div>
     
         <div class="hr-line-dashed"></div>
         <div class="form-group">
