--- a/imports/ui/components/item/item-show.html
+++ b/imports/ui/components/item/item-show.html
@@ -20,77 +20,13 @@
   </p>
   
 <h3>{{item.desc}}</h3>     
-
-{{#if expanded}}
-      <p class='{{#if person.isMale}} text-primary {{else}} text-female {{/if}}'>
-        <small class='text-muted'>
-          {{#if person.isMale}}
-            <i class='fa fa-male'> </i>{{else}}
-            <i class='fa fa-female'> </i>
-          {{/if}}
+<!-- <h3>PC: {{item.profitCenter}}</h3>      -->
 
 
-        </small>
-        {{person.name}}  {{person.lastName}}</p>
-        {{/if}}
 
-      </div>
-    </div>
-    <div class='row'>
-      <div class='col-xs-4 col-md-4 col-lg-4 text-center'>
-        {{#if person.email}}
 
-          <a class='btn btn-lg {{#if person.isMale}} btn-primary {{else}} btn-female {{/if}}' href='mailto:{{person.email}}' data-action='click-override'>
-            <i class='fa fa-envelope'></i>
-          </a>
-
-        {{/if}}
-
-      </div>
-      <div class='col-xs-4 col-md-4 col-lg-4 text-center'>
-
-        {{#if person.mobile}}
-          <a class='btn btn-lg {{#if person.isMale}} btn-primary {{else}} btn-female {{/if}}' href='tel:{{person.mobile}}' data-action='click-override'>
-            <i class='fa fa-whatsapp'></i>
-          </a>
-        {{/if}}
-
-      </div>
-      <div class='col-xs-4 col-md-4 col-lg-4 text-center'>
-
-        {{#if person.phone}}
-          <a class='btn btn-lg {{#if person.isMale}} btn-primary {{else}} btn-female {{/if}}' href='tel:{{person.phone}}' data-action='click-override'>
-            <i class='fa fa-phone'></i>
-          </a>
-        {{/if}}
-
-      </div>
-      {{#if expanded}}
-      <div class='col-xs-4 col-md-4 col-lg-4 text-center'>
-        {{#if person.email}}
-          <p class='{{#if person.isMale}} text-primary {{else}} text-female {{/if}}' >
-            <i class='fa fa-envelope'> </i>
-            {{person.email}}
-        </p>
-        {{/if}}
-        {{#if person.phone}}
-          <p class='{{#if person.isMale}} text-primary {{else}} text-female {{/if}}' >
-            <i class='fa fa-phone'> </i>
-            {{person.phone}}
-        </p>
-        {{/if}}
-      
-        {{#if person.mobile}}
-          <p class='{{#if person.isMale}} text-primary {{else}} text-female {{/if}}' >
-            <i class='fa fa-whatsapp'> </i>
-            {{person.mobile}}
-        </p>
-        {{/if}}
-
-      </div>
-      {{/if}}
-
-    </div>
+</div>
+</div>
 </div>
   
 </template>
